- **Status**: **BETA** (Awaiting Hardware Validation)
- **Busy Tone Feature**:
    - "Off-Hook Timeout": If the handset is lifted but no number dialed for 5 seconds, a busy signal loop plays.
    - Prevents undefined states. Dialing is blocked until hung up.
    - **Snooze Exception**: Snooze mode keeps the handset silent (no busy tone) to allow "putting the phone aside".
- **Performance**:
    - **Non-Blocking Audio**: Converted "Time Speaking" logic to a Queue system. The main loop no longer freezes while the device speaks dates or confirmations.
    - **Reduced Logging**: Stripped debug output for cleaner serial terminal behavior.
- **Stability Fixes**:
    - **Audio Queue Management**: Fixed "stale queue" issues where interrupted sentences would play back randomly later.
    - **Boot Safety**: Added explicit wait-state during boot to prevent crashes if the Audio Task initializes slowly.
    - **Volume Guard**: Ensured volume resets to defaults after alarm termination.
    - **Config Safety**: Added automated fix for invalid Dial Tone configurations.
- **Licensing**:
    - Applied **PolyForm Noncommercial License 1.0.0** to the repository (see [README.md](README.md)).

## v0.7.1-beta (2026-01-18) - "The Voice Feedback Update"
- **Enhanced Voice Navigation**:
    - **Base Speaker confirmation** when canceling timers or deleting manual alarms.
    - Added dedicated voice prompts for "Timer Cancelled" and "Alarm Deleted".
- **Hardware Controls**:
    - **Timer Cancel**: Lifting the handset instantly cancels any running timer (with voice confirmation).
    - **Manual Alarm Delete**: Holding the extra button **while lifting the handset** deletes the manual alarm.
- **Dial Codes**:
    - **Dial 90**: Explicit code to toggle ALL alarms.
    - **Dial 91**: Explicit code to toggle "Skip Next Alarm".

## v0.7.0-beta (2026-01-18) - "The Robustness Update"